force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <description>Gestión de Tickets</description>
    <label>Ticket</label>
    <nameField>
        <label>Nombre del Ticket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>