force-app/main/default/objects/Ticket__c/fields/Acumulado_Abierto__c.field-meta.xml
<CustomField>
    <fullName>Acumulado_Abierto__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Se informa al cambiar el estado a bloqueado con PB “Control Caso Bloqueado”</description>
    <label>Acumulado Abierto</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>