force-app/main/default/objects/Ticket__c/fields/Asignado_a__c.field-meta.xml
<CustomField>
    <fullName>Asignado_a__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asignado a</label>
    <type>Text</type>
</CustomField>