force-app/main/default/objects/Ticket__c/fields/Caducado__c.field-meta.xml
<CustomField>
    <fullName>Caducado__c</fullName>
    <formula>IF( Horas_Abierto_Total__c &gt; SLA__c , 
&quot;Caducado&quot;, 
&quot;Vigente&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caducado</label>
    <type>Text</type>
</CustomField>