force-app/main/default/objects/Ticket__c/fields/Codigo_del_ticket__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_ticket__c</fullName>
    <displayFormat>TCK-{000000}</displayFormat>
    <label>Código del ticket</label>
    <type>AutoNumber</type>
</CustomField>