force-app/main/default/objects/Ticket__c/fields/Colorimetro__c.field-meta.xml
<CustomField>
    <fullName>Colorimetro__c</fullName>
    <formula>IF( Horas_Abierto_Total__c &gt; SLA__c , 
IMAGE($Setup.Semaforo__c.Semaforo_rojo__c, &quot;Rojo&quot;,30,30), 
IMAGE( $Setup.Semaforo__c.Semaforo_Verde__c , &quot;Verde&quot;,30,30) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colorímetro</label>
    <type>Text</type>
</CustomField>