force-app/main/default/objects/Ticket__c/fields/Equipo_Responsable__c.field-meta.xml
<CustomField>
    <fullName>Equipo_Responsable__c</fullName>
    <formula>If ( Owner:User.Profile.Name= &quot;Cliente AYESA&quot;, &quot;CLIENTE&quot;, &quot;CONSORCIO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipo Responsable</label>
    <type>Text</type>
</CustomField>