force-app/main/default/objects/Ticket__c/fields/Fecha_Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Bloqueado__c</fullName>
    <description>Se informa mediante un PB con la fecha NOW al crearse/modificarse un caso a igual de “Bloqueado”. El PB “Control Caso Bloqueado” se encarga de limpiar la Fecha Abierta.</description>
    <label>Fecha Bloqueado</label>
    <type>DateTime</type>
</CustomField>