force-app/main/default/objects/Ticket__c/fields/Fecha_de_Alta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Alta__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Alta</label>
    <type>DateTime</type>
</CustomField>