force-app/main/default/objects/Ticket__c/fields/Fecha_PreCierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_PreCierre__c</fullName>
    <description>Se informa cuando el estado pasa a Rechazado o Resuelto. Se utiliza para cerrar tras los 5 días sin actividad.</description>
    <label>Fecha PreCierre</label>
    <type>DateTime</type>
</CustomField>