force-app/main/default/objects/Ticket__c/fields/Horas_Abierto__c.field-meta.xml
<CustomField>
    <fullName>Horas_Abierto__c</fullName>
    <description>(Diferencia entre TODAY - Fecha Abierta) +Acumulado Abierto</description>
    <formula>ROUND( 10* ( 
( 5 * FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 10* ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 13:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( Fecha_Abierta2__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( Fecha_Abierta2__c) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 10 * ( MOD( Fecha_Abierta2__c - DATETIMEVALUE( &apos;1900-01-08 13:00:00&apos; ), 1) ) ) 
) 
) 
), 
3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Abierto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>