force-app/main/default/objects/Ticket__c/fields/Horas_Abierto_Total__c.field-meta.xml
<CustomField>
    <fullName>Horas_Abierto_Total__c</fullName>
    <formula>IF (ISBLANK(datevalue(Fecha_Abierta__c)), Acumulado_Abierto__c, 

Horas_Abierto__c 

+ Acumulado_Abierto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Abierto Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>