force-app/main/default/objects/Ticket__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Módulo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Modulo</valueSetName>
    </valueSet>
</CustomField>