force-app/main/default/objects/Ticket__c/fields/Rechazo_Confirmado__c.field-meta.xml
<CustomField>
    <fullName>Rechazo_Confirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca al Finalizar un ticket tras haber estado Rechazado</description>
    <label>Rechazo Confirmado</label>
    <type>Checkbox</type>
</CustomField>