force-app/main/default/objects/Ticket__c/fields/Rojo__c.field-meta.xml
<CustomField>
    <fullName>Rojo__c</fullName>
    <formula>IF( Horas_Abierto_Total__c &gt; SLA__c ,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rojo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>