force-app/main/default/objects/Ticket__c/fields/Secuencia_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Secuencia_Ticket__c</fullName>
    <displayFormat>EPMAPS-{00000}</displayFormat>
    <label>Ticket</label>
    <type>AutoNumber</type>
</CustomField>