force-app/main/default/objects/Ticket__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>