force-app/main/default/objects/Ticket__c/fields/Ult_Mod_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Ult_Mod_Equipo__c</fullName>
    <formula>IF( LastModifiedBy.Profile.Name=&quot;Cliente AYESA&quot;, &quot;CLIENTE&quot;, &quot;CONSORCIO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Última modificación por equipo</label>
    <type>Text</type>
</CustomField>