force-app/main/default/objects/Ticket__c/fields/Verde__c.field-meta.xml
<CustomField>
    <fullName>Verde__c</fullName>
    <formula>IF( Horas_Abierto_Total__c &lt;= SLA__c ,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verde</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>