force-app/main/default/objects/Ticket__c/validationRules/Estado_Inicial_Nuevo.validationRule-meta.xml
<ValidationRule>
    <fullName>Estado_Inicial_Nuevo</fullName>
    <active>true</active>
    <description>No está permitido modificar el estado inicial. Debe ser &quot;Nuevo&quot;</description>
    <errorConditionFormula>AND(ISNEW(),NOT(ISPICKVAL( Estado__c ,&quot;Nuevo&quot;)))</errorConditionFormula>
    <errorMessage>El estado inicial del Ticket debe ser &quot;Nuevo&quot;</errorMessage>
</ValidationRule>