force-app/main/default/objects/Ticket__c/validationRules/Prioridad_Obligatoria.validationRule-meta.xml
<ValidationRule>
    <fullName>Prioridad_Obligatoria</fullName>
    <active>true</active>
    <description>No permite elegir &quot;Ninguno&quot;. Se hace esto porque no se quiere que el campo aparezca como obligatorio.</description>
    <errorConditionFormula>ISPICKVAL(Prioridad__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Prioridad__c</errorDisplayField>
    <errorMessage>Debe seleccionar uno de los valores disponibles.</errorMessage>
</ValidationRule>