force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Codigo_del_ticket__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Estado__c</columns>
    <columns>Prioridad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>